# x11_blazeface

./: .bazelrc  .bazelrc-old  MODULE.bazel  README.md  WORKSPACE  litert_ext.bzl  setup01_compile.sh
src/: BUILD  BUILD.bazel  litert_face_model.cc  litert_face_model.h  litert_model.cc  main.cc  setup01_compile.sh
