# src/BUILD.bazel

package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "blazeface_hermetic",
    srcs = ["main.cc"],
    deps = [
        # The main C++ API target from our @litert repository
        "@litert//litert/cc:litert_api_with_dynamic_runtime",

        # The C++ code uses absl::Span. LiteRT pulls in Abseil,
        # so we can depend on it here.
        #"@com_google_absl//absl/types:span",

        # The hermetic X11 libraries from the Bazel Central Registry
        "@libx11//:libx11",
        #"@libxext//:libxext",
        #"@libxfixes//:libxfixes",
    ],
)